objects/Smlouva__c/Smlouva__c.object-meta.xml
<CustomObject>
    <description>Smlouva připojená k účasti firmy/kontaktu.</description>
    <label>Smlouva</label>
    <nameField>
        <label>Název</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smlouvy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>