objects/Smlouva__c/fields/agreements_aggregator__c.field-meta.xml
<CustomField>
    <fullName>agreements_aggregator__c</fullName>
    <formula>IF( Stav__c == &quot;Uzavřená&quot;, 1, 0)
+
IF( Stav__c == &quot;V přípravě&quot;, 1000, 0)
+
IF( Stav__c == &quot;Připravena&quot;, 1000000, 0)
+
IF( Stav__c == &quot;Platná&quot;, 1000000000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_agreements_aggregator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>