objects/Smlouva__c/fields/Aktualni_obdobi_cena__c.field-meta.xml
<CustomField>
    <fullName>Aktualni_obdobi_cena__c</fullName>
    <formula>IF ( ISBLANK(Castka_plneni_1__c ), 
Castka_plneni__c

,

IF( ISBLANK(  dluh_callback__c), Castka_plneni_1__c   , Castka_plneni__c) 

 )</formula>
    <label>Cena za aktuální období</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>