objects/Smlouva__c/fields/Castka_plneni_1__c.field-meta.xml
<CustomField>
    <fullName>Castka_plneni_1__c</fullName>
    <label>Částka 1. plnění</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>