objects/Smlouva__c/fields/Castka_plneni__c.field-meta.xml
<CustomField>
    <fullName>Castka_plneni__c</fullName>
    <label>Částka plnění</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>