objects/Smlouva__c/fields/Cislo_smlouvy_manual__c.field-meta.xml
<CustomField>
    <fullName>Cislo_smlouvy_manual__c</fullName>
    <description>Číslo smlouvy určené protistranou nebo v případě, že slouží pro identifikaci splátek a je odlišné od automatického čísla smlouvy. Použijte pouze v nutném případě.</description>
    <externalId>true</externalId>
    <inlineHelpText>Číslo smlouvy určené protistranou nebo v případě, že slouží pro identifikaci splátek a je odlišné od automatického čísla smlouvy. Použijte pouze v nutném případě.</inlineHelpText>
    <label>Vlastní číslo smlouvy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>