objects/Smlouva__c/fields/Datum_dalsi_uhrady_splatka__c.field-meta.xml
<CustomField>
    <fullName>Datum_dalsi_uhrady_splatka__c</fullName>
    <label>Datum další úhrady (splátky)</label>
    <summarizedField>Splatka__c.Predpokladane_datum_splatnosti__c</summarizedField>
    <summaryFilterItems>
        <field>Splatka__c.Stav__c</field>
        <operation>equals</operation>
        <value>Neuhrazeno</value>
    </summaryFilterItems>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>