objects/Smlouva__c/fields/Datum_doruceni_zpravy__c.field-meta.xml
<CustomField>
    <fullName>Datum_doruceni_zpravy__c</fullName>
    <label>Zpráva doručena</label>
    <type>Date</type>
</CustomField>