objects/Smlouva__c/fields/Datum_odeslani_del__c.field-meta.xml
<CustomField>
    <fullName>Datum_odeslani_del__c</fullName>
    <label>Smouva odeslána</label>
    <type>Date</type>
</CustomField>