objects/Smlouva__c/fields/Datum_odstoupeni__c.field-meta.xml
<CustomField>
    <fullName>Datum_odstoupeni__c</fullName>
    <label>Datum výpovědi / odstoupení</label>
    <type>Date</type>
</CustomField>