objects/Smlouva__c/fields/Datum_posledni_platby__c.field-meta.xml
<CustomField>
    <fullName>Datum_posledni_platby__c</fullName>
    <label>Datum poslední platby</label>
    <summarizedField>Splatka__c.Datum_uhrady__c</summarizedField>
    <summaryFilterItems>
        <field>Splatka__c.Stav__c</field>
        <operation>equals</operation>
        <value>Uhrazeno</value>
    </summaryFilterItems>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>