objects/Smlouva__c/fields/Datum_prijeti_del__c.field-meta.xml
<CustomField>
    <fullName>Datum_prijeti_del__c</fullName>
    <label>Smlouva přijata</label>
    <type>Date</type>
</CustomField>