objects/Smlouva__c/fields/dluh_callback__c.field-meta.xml
<CustomField>
    <fullName>dluh_callback__c</fullName>
    <label>_dluh_callback</label>
    <summarizedField>Splatka__c.dluh_aggregator__c</summarizedField>
    <summaryFilterItems>
        <field>Splatka__c.Stav__c</field>
        <operation>equals</operation>
        <value>Uhrazeno</value>
    </summaryFilterItems>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>