objects/Smlouva__c/fields/Dluh_za_minula_obdobi__c.field-meta.xml
<CustomField>
    <fullName>Dluh_za_minula_obdobi__c</fullName>
    <formula>IF (
VALUE(LEFT(RIGHT(TEXT( dluh_callback__c), 8), 1)) &gt; 0,

 - VALUE(RIGHT(TEXT( dluh_callback__c), 7))
,
  VALUE(RIGHT(TEXT( dluh_callback__c), 7))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dluh za minulá období</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>