objects/Smlouva__c/fields/ID_cislo_del__c.field-meta.xml
<CustomField>
    <fullName>ID_cislo_del__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>ID číslo</label>
    <type>AutoNumber</type>
</CustomField>