objects/Smlouva__c/fields/Interne_schvaleno__c.field-meta.xml
<CustomField>
    <fullName>Interne_schvaleno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interně schváleno</label>
    <type>Checkbox</type>
</CustomField>