objects/Smlouva__c/fields/Konec_obdobi_platnosti__c.field-meta.xml
<CustomField>
    <fullName>Konec_obdobi_platnosti__c</fullName>
    <formula>IF ( !ISBLANK( Platnost_do__c ), Platnost_do__c,   Obdobi_zaplaceno_do_splatky__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Konec zaplaceného/zasmluvněného období</label>
    <type>Date</type>
</CustomField>