objects/Smlouva__c/fields/last_status_aggregator__c.field-meta.xml
<CustomField>
    <fullName>last_status_aggregator__c</fullName>
    <formula>(
YEAR(Platnost_do__c)*10000 
+ 
MONTH(Platnost_do__c)*100 
+ 
DAY(Platnost_do__c) 
) * 10000

+ 

IF( Stav__c == &quot;Uzavřená&quot;, 1, 0) 
+ 
IF( Stav__c == &quot;V přípravě&quot;, 10, 0) 
+ 
IF( Stav__c == &quot;Připravena&quot;, 100, 0) 
+ 
IF( Stav__c == &quot;Platná&quot;, 1000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_last_status_aggregator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>