objects/Smlouva__c/fields/Mena__c.field-meta.xml
<CustomField>
    <fullName>Mena__c</fullName>
    <label>Měna</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CZK</fullName>
                <default>true</default>
                <label>CZK</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>