objects/Smlouva__c/fields/Nabidka_kampan__c.field-meta.xml
<CustomField>
    <fullName>Nabidka_kampan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Kampaň</label>
    <referenceTo>Kampan__c</referenceTo>
    <relationshipLabel>Nabídky</relationshipLabel>
    <relationshipName>Nabidky</relationshipName>
    <type>Lookup</type>
</CustomField>