objects/Smlouva__c/fields/Nabidka_stav__c.field-meta.xml
<CustomField>
    <fullName>Nabidka_stav__c</fullName>
    <label>Stav nabídky</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nabídnuto</fullName>
            </value>
            <value>
                <fullName>Objednáno</fullName>
            </value>
            <value>
                <fullName>Dodáno</fullName>
            </value>
            <value>
                <fullName>Nezájem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>