objects/Smlouva__c/fields/Obdobi_pristi_konec__c.field-meta.xml
<CustomField>
    <fullName>Obdobi_pristi_konec__c</fullName>
    <formula>DATE(

IF ( prvni_obdobi_zaplaceno__c = &quot;Ne&quot; &amp;&amp;  ISPICKVAL(Splatkovy_kalendar__c, &quot;Zkrácený režim&quot;) ,

YEAR( Pocatek_predplaceneho_obdobi__c ),



IF (prvni_obdobi_zaplaceno__c = &quot;Ne&quot;, YEAR(Pocatek_predplaceneho_obdobi__c),YEAR(Obdobi_zaplaceno_do_splatky__c) )+1)

,
IF( ISPICKVAL(Splatkovy_kalendar__c, &quot;Přes rok&quot;), 6, 12)
,

IF( ISPICKVAL(Splatkovy_kalendar__c, &quot;Přes rok&quot;), 30, 31)

)</formula>
    <label>Konec příštího období</label>
    <type>Date</type>
</CustomField>