objects/Smlouva__c/fields/Obdobi_zaplaceno_do__c.field-meta.xml
<CustomField>
    <fullName>Obdobi_zaplaceno_do__c</fullName>
    <formula>IF(  Castka_plneni__c = 0,

     IF(  Castka_plneni_1__c &gt; 0 &amp;&amp;  prvni_obdobi_zaplaceno__c = &quot;Ne&quot;, 
              null, 
              DATE(2100, 1, 1)     )
,

     IF (   Castka_plneni_1__c = 0 &amp;&amp;  ISBLANK(Obdobi_zaplaceno_do_splatky__c),   
             DATE(2006, 1, 1),  
             Obdobi_zaplaceno_do_splatky__c  )

)</formula>
    <label>Období zaplaceno do</label>
    <type>Date</type>
</CustomField>