objects/Smlouva__c/fields/Obdobi_zaplaceno_do_splatky__c.field-meta.xml
<CustomField>
    <fullName>Obdobi_zaplaceno_do_splatky__c</fullName>
    <label>Období zaplaceno do (splátky)</label>
    <summarizedField>Splatka__c.Placene_obdobi_do__c</summarizedField>
    <summaryFilterItems>
        <field>Splatka__c.Posun_obdobi__c</field>
        <operation>equals</operation>
        <value>Ano</value>
    </summaryFilterItems>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>