objects/Smlouva__c/fields/Odchoz_slo_tu_spl_tek__c.field-meta.xml
<CustomField>
    <fullName>Odchoz_slo_tu_spl_tek__c</fullName>
    <description>Vyplňte v případě, kdy znáte číslo účtu, ze kterého jsou zasílány splátky.</description>
    <externalId>true</externalId>
    <inlineHelpText>Vyplňte v případě, kdy znáte číslo účtu, ze kterého jsou zasílány splátky.</inlineHelpText>
    <label>Odchozí číslo účtu splátek</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>