objects/Smlouva__c/fields/Platnost__c.field-meta.xml
<CustomField>
    <fullName>Platnost__c</fullName>
    <label>Platnost</label>
    <length>32</length>
    <type>Text</type>
</CustomField>