objects/Smlouva__c/fields/Platnost_do__c.field-meta.xml
<CustomField>
    <fullName>Platnost_do__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), 12, 31)</defaultValue>
    <label>Platnost do</label>
    <type>Date</type>
</CustomField>