objects/Smlouva__c/fields/Platnost_od__c.field-meta.xml
<CustomField>
    <fullName>Platnost_od__c</fullName>
    <label>Platnost od</label>
    <type>Date</type>
</CustomField>