objects/Smlouva__c/fields/Pocatek_predplaceneho_obdobi__c.field-meta.xml
<CustomField>
    <fullName>Pocatek_predplaceneho_obdobi__c</fullName>
    <label>Počátek předplaceného období</label>
    <type>Date</type>
</CustomField>