objects/Smlouva__c/fields/Poznamka__c.field-meta.xml
<CustomField>
    <fullName>Poznamka__c</fullName>
    <label>Poznámka</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>