objects/Smlouva__c/fields/Pravni_subjektivita__c.field-meta.xml
<CustomField>
    <fullName>Pravni_subjektivita__c</fullName>
    <label>Právní subjektivita</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nadace Partnerství</fullName>
                <default>true</default>
                <label>Nadace Partnerství</label>
            </value>
            <value>
                <fullName>Partnerství o. p. s.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>