objects/Smlouva__c/fields/Pristi_splatka_ocekavana__c.field-meta.xml
<CustomField>
    <fullName>Pristi_splatka_ocekavana__c</fullName>
    <formula>IF( Obdobi_pristi_konec__c &lt; Datum_dalsi_uhrady_splatka__c  || ISBLANK(Datum_dalsi_uhrady_splatka__c) ,

IF(ISBLANK(Obdobi_zaplaceno_do__c),  Pocatek_predplaceneho_obdobi__c+20,Obdobi_zaplaceno_do__c   - 30 )

,

Datum_dalsi_uhrady_splatka__c
)</formula>
    <label>Příští splátka očekávána</label>
    <type>Date</type>
</CustomField>