objects/Smlouva__c/fields/prvni_obdobi_zaplaceno__c.field-meta.xml
<CustomField>
    <fullName>prvni_obdobi_zaplaceno__c</fullName>
    <formula>IF (ISBLANK(Castka_plneni_1__c),
IF( Uhrazena_castka__c &gt;=    Castka_plneni__c ,&quot;Ano&quot;, &quot;Ne&quot;)
,
IF( Uhrazena_castka__c &gt;=    Castka_plneni_1__c,&quot;Ano&quot;, &quot;Ne&quot;)
)</formula>
    <label>1. období zaplaceno</label>
    <type>Text</type>
</CustomField>