objects/Smlouva__c/fields/Schvaleno_od_zakaznika__c.field-meta.xml
<CustomField>
    <fullName>Schvaleno_od_zakaznika__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schváleno od zákazníka</label>
    <type>Checkbox</type>
</CustomField>