objects/Smlouva__c/fields/Splatkovy_kalendar__c.field-meta.xml
<CustomField>
    <fullName>Splatkovy_kalendar__c</fullName>
    <label>Splátkový kalendář</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Celý rok</fullName>
            </value>
            <value>
                <fullName>Přes rok</fullName>
            </value>
            <value>
                <fullName>Partnerství LS</fullName>
            </value>
            <value>
                <fullName>Partnerství MVS</fullName>
            </value>
            <value>
                <fullName>Další objekt CV</fullName>
            </value>
            <value>
                <fullName>Zkrácený režim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>