objects/Smlouva__c/fields/status_aggregator_callback__c.field-meta.xml
<CustomField>
    <fullName>status_aggregator_callback__c</fullName>
    <label>_status_aggregator_callback</label>
    <summarizedField>Splatka__c.status_aggregator__c</summarizedField>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>