objects/Smlouva__c/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <formula>IF (ISBLANK( Datum_odstoupeni__c ),


IF (Stav_schvalovani__c  == &quot;Schváleno&quot;,


CASE(TEXT(Nabidka_stav__c), &quot;Objednáno&quot;, &quot;Platná&quot;, &quot;Dodáno&quot;, &quot;Uzavřeno&quot;, &quot;Nezájem&quot;, &quot;Uzavřená&quot;,  

IF ( Platnost__c == &quot;Platná&quot;, &quot;Platná&quot;,
IF ( Platnost__c == &quot;Uzavřená&quot;, &quot;Uzavřená&quot;,
IF ( !ISBLANK( Platnost_od__c ), 
&quot;Připravena&quot;,
&quot;V přípravě&quot;
)))


)


,


&quot;V přípravě&quot;

)

,
&quot;Uzavřená&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav</label>
    <type>Text</type>
</CustomField>