objects/Smlouva__c/fields/Stav_plateb__c.field-meta.xml
<CustomField>
    <fullName>Stav_plateb__c</fullName>
    <formula>IF ( status_aggregator_callback__c &gt;= 100000000 || 

TODAY() &gt;   BLANKVALUE(Pristi_splatka_ocekavana__c  , DATE(2100, 1, 1))  

, 
&quot;Po splatnosti&quot;,
IF (  Zbyva_uhradit__c &lt;= 0 , 
&quot;Uhrazeno&quot;,
&quot;Neuhrazeno&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav plateb</label>
    <type>Text</type>
</CustomField>