objects/Smlouva__c/fields/Stav_schvalovani__c.field-meta.xml
<CustomField>
    <fullName>Stav_schvalovani__c</fullName>
    <formula>IF ( RecordTypeId = &quot;012F0000000qI54&quot;, 

&quot;Schváleno&quot;
,

IF ( Zjednodusen_schalovani__c = &quot;Ano&quot;  &amp;&amp; !Interne_schvaleno__c, &quot;Čeká na interní schválení&quot;,
IF ( !Schvaleno_od_zakaznika__c, &quot;Čeká na schválení od zákazníka&quot;,
&quot;Schváleno&quot;
 ) )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav schvalování</label>
    <type>Text</type>
</CustomField>