objects/Smlouva__c/fields/Stav_zpravy__c.field-meta.xml
<CustomField>
    <fullName>Stav_zpravy__c</fullName>
    <formula>IF ( Zprava_zpracovavana__c, 
    IF (ISBLANK(Datum_doruceni_zpravy__c), &quot;Doručeno&quot;, &quot;V přípravě&quot;),
    IF (Zprava_planovana__c &lt;=  TODAY(), &quot;V termínu přípravy&quot;, &quot;-&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav zprávy</label>
    <type>Text</type>
</CustomField>