objects/Smlouva__c/fields/Ucast__c.field-meta.xml
<CustomField>
    <fullName>Ucast__c</fullName>
    <label>Účast</label>
    <referenceTo>Ucast__c</referenceTo>
    <relationshipLabel>Smlouvy</relationshipLabel>
    <relationshipName>Smlouvy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>