objects/Smlouva__c/fields/Ucet_del_del__c.field-meta.xml
<CustomField>
    <fullName>Ucet_del_del__c</fullName>
    <formula>Ucast__r.Ucet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Účet</label>
    <type>Text</type>
</CustomField>