objects/Smlouva__c/fields/Uhrazena_castka__c.field-meta.xml
<CustomField>
    <fullName>Uhrazena_castka__c</fullName>
    <label>Uhrazená částka</label>
    <summarizedField>Splatka__c.Castka__c</summarizedField>
    <summaryFilterItems>
        <field>Splatka__c.Stav__c</field>
        <operation>equals</operation>
        <value>Uhrazeno</value>
    </summaryFilterItems>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>