objects/Smlouva__c/fields/Uhrazeno__c.field-meta.xml
<CustomField>
    <fullName>Uhrazeno__c</fullName>
    <formula>IF (Obdobi_zaplaceno_do__c &gt;= TODAY(), 1,

if (Castka_plneni__c &gt; 0, Uhrazena_castka__c  /  (Castka_plneni__c + Castka_plneni_1__c) , 0)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uhrazeno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>