objects/Smlouva__c/fields/Variabilni_symbol__c.field-meta.xml
<CustomField>
    <fullName>Variabilni_symbol__c</fullName>
    <formula>TEXT(Cislo_smlouvy_manual__c)+&quot;XX&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variabilní symbol</label>
    <type>Text</type>
</CustomField>