objects/Smlouva__c/fields/Vypoved_odstoupeni__c.field-meta.xml
<CustomField>
    <fullName>Vypoved_odstoupeni__c</fullName>
    <label>Spolupráce ukončena ze strany</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>