objects/Smlouva__c/fields/Zbyva_uhradit__c.field-meta.xml
<CustomField>
    <fullName>Zbyva_uhradit__c</fullName>
    <formula>IF (  Obdobi_zaplaceno_do__c &gt;= TODAY(), 0,

IF( Zbyva_uhradit_dle_splatek__c &gt; (Castka_plneni__c - Uhrazena_castka__c),  Zbyva_uhradit_dle_splatek__c,

IF( Castka_plneni__c - Uhrazena_castka__c &lt; 0, 0 ,  Castka_plneni__c - Uhrazena_castka__c)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zbývá uhradit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>