objects/Smlouva__c/fields/Zbyva_uhradit_dle_splatek__c.field-meta.xml
<CustomField>
    <fullName>Zbyva_uhradit_dle_splatek__c</fullName>
    <label>Zbývá uhradit dle splátek</label>
    <summarizedField>Splatka__c.Castka__c</summarizedField>
    <summaryFilterItems>
        <field>Splatka__c.Stav__c</field>
        <operation>notEqual</operation>
        <value>Uhrazeno</value>
    </summaryFilterItems>
    <summaryForeignKey>Splatka__c.Smlouva__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>