objects/Smlouva__c/fields/Zjednodusen_schalovani__c.field-meta.xml
<CustomField>
    <fullName>Zjednodusen_schalovani__c</fullName>
    <formula>IF( RecordTypeId  = &quot;V přípravě&quot;, &quot;Ano&quot;, &quot;Ne&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zjednodušené schalování</label>
    <type>Text</type>
</CustomField>