objects/Smlouva__c/fields/Zprava_planovana__c.field-meta.xml
<CustomField>
    <fullName>Zprava_planovana__c</fullName>
    <label>Zpráva plánována</label>
    <type>Date</type>
</CustomField>