objects/Smlouva__c/fields/Zprava_zpracovavana__c.field-meta.xml
<CustomField>
    <fullName>Zprava_zpracovavana__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zpráva zpracovávána</label>
    <type>Checkbox</type>
</CustomField>