objects/Smlouva__c/recordTypes/Barter.recordType-meta.xml
<RecordType>
    <fullName>Barter</fullName>
    <active>true</active>
    <label>Barter</label>
</RecordType>