objects/Smlouva__c/recordTypes/Jednorazovy_dar.recordType-meta.xml
<RecordType>
    <fullName>Jednorazovy_dar</fullName>
    <active>true</active>
    <label>Jednorázový dar</label>
</RecordType>