objects/Smlouva__c/recordTypes/Komisionarska.recordType-meta.xml
<RecordType>
    <fullName>Komisionarska</fullName>
    <active>true</active>
    <label>Komisionářská</label>
</RecordType>