objects/Smlouva__c/recordTypes/Nabidka.recordType-meta.xml
<RecordType>
    <fullName>Nabidka</fullName>
    <active>true</active>
    <label>Nabídka</label>
</RecordType>