objects/Smlouva__c/recordTypes/O_dilo.recordType-meta.xml
<RecordType>
    <fullName>O_dilo</fullName>
    <active>true</active>
    <label>O dílo</label>
</RecordType>