objects/Smlouva__c/recordTypes/O_poskytnuti_dotace.recordType-meta.xml
<RecordType>
    <fullName>O_poskytnuti_dotace</fullName>
    <active>true</active>
    <label>O poskytnutí dotace</label>
</RecordType>