objects/Smlouva__c/recordTypes/O_poskytovani_sluzeb.recordType-meta.xml
<RecordType>
    <fullName>O_poskytovani_sluzeb</fullName>
    <active>true</active>
    <label>O poskytování služeb</label>
</RecordType>