objects/Smlouva__c/recordTypes/O_spolupraci_na_Greenways.recordType-meta.xml
<RecordType>
    <fullName>O_spolupraci_na_Greenways</fullName>
    <active>true</active>
    <label>O spolupráci na Greenways</label>
</RecordType>