objects/Smlouva__c/recordTypes/O_spolupraci_s_vinari.recordType-meta.xml
<RecordType>
    <fullName>O_spolupraci_s_vinari</fullName>
    <active>true</active>
    <label>O spolupráci s vinaři</label>
</RecordType>