objects/Smlouva__c/recordTypes/Objednavka.recordType-meta.xml
<RecordType>
    <fullName>Objednavka</fullName>
    <active>true</active>
    <label>Objednávka</label>
</RecordType>