objects/Smlouva__c/recordTypes/Ostatni.recordType-meta.xml
<RecordType>
    <fullName>Ostatni</fullName>
    <active>true</active>
    <label>Ostatní</label>
</RecordType>