objects/Smlouva__c/recordTypes/Podlicence_Grantys.recordType-meta.xml
<RecordType>
    <fullName>Podlicence_Grantys</fullName>
    <active>true</active>
    <label>Podlicence Grantys</label>
</RecordType>