objects/Smlouva__c/recordTypes/Reklamni.recordType-meta.xml
<RecordType>
    <fullName>Reklamni</fullName>
    <active>true</active>
    <label>Reklamní</label>
</RecordType>