objects/Smlouva__c/recordTypes/S_dodavateli.recordType-meta.xml
<RecordType>
    <fullName>S_dodavateli</fullName>
    <active>true</active>
    <description>nápověda. elektřina, plyn, telefon, atp.</description>
    <label>S dodavateli</label>
</RecordType>