objects/Smlouva__c/recordTypes/Smlouva_darovaci.recordType-meta.xml
<RecordType>
    <fullName>Smlouva_darovaci</fullName>
    <active>true</active>
    <label>Darovací</label>
</RecordType>