objects/Smlouva__c/recordTypes/Smlouva_o_certifikaci_CV.recordType-meta.xml
<RecordType>
    <fullName>Smlouva_o_certifikaci_CV</fullName>
    <active>true</active>
    <label>O certifikaci CV</label>
</RecordType>