objects/Smlouva__c/recordTypes/Smlouva_o_spolupraci.recordType-meta.xml
<RecordType>
    <fullName>Smlouva_o_spolupraci</fullName>
    <active>true</active>
    <description>S firemními partnery, případně jiná vyjma CV a vinařů</description>
    <label>* o spolupráci</label>
</RecordType>