objects/Smlouva__c/validationRules/Nazev_uvozovky.validationRule-meta.xml
<ValidationRule>
    <fullName>Nazev_uvozovky</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Name , &apos;&quot;&apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Název nesmí obsahovat uvozovky.</errorMessage>
</ValidationRule>