objects/Smlouva__c/validationRules/Vypoved_odstoupeni.validationRule-meta.xml
<ValidationRule>
    <fullName>Vypoved_odstoupeni</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISBLANK(TEXT(Vypoved_odstoupeni__c )) &amp;&amp; ISBLANK( Datum_odstoupeni__c ))

||

(ISBLANK( TEXT(Vypoved_odstoupeni__c )) &amp;&amp; !ISBLANK( Datum_odstoupeni__c ))</errorConditionFormula>
    <errorDisplayField>Vypoved_odstoupeni__c</errorDisplayField>
    <errorMessage>Při výpovědi/odstrupení musí být nastaveno datum i typ ukončení smlouvy.</errorMessage>
</ValidationRule>